--- a/docsnxt/app/activity/home/home.template.html
+++ b/docsnxt/app/activity/home/home.template.html
@@ -1,1 +1,5 @@
-<navbar></navbar>
+<!--navbar></navbar-->
+<div class="container">
+    <br>
+    <h4><b class="white-text">Beautiful World</b></h4>
+</div>
