--- a/docsnxt/app/shared/navbar/navbar.template.html
+++ b/docsnxt/app/shared/navbar/navbar.template.html
@@ -1,5 +1,5 @@
-<nav class="white z-depth-0">
-  <a class="brand-logo black-text" href="#!">
-    Hello World
+<nav class="{{$ctrl.color}} {{$ctrl.shadow}}">
+  <a class="brand-logo {{$ctrl.titleColor}}" href="#!">
+    {{$ctrl.title}}
   </a>
 </nav>
