--- a/docsnxt/index.html
+++ b/docsnxt/index.html
@@ -29,6 +29,8 @@
     <!-- Activity -->
     <script type="text/javascript" src="app/activity/home/home.module.js"></script>
     <script type="text/javascript" src="app/activity/home/home.component.js"></script>
+    <script type="text/javascript" src="app/activity/home/ride.module.js"></script>
+    <script type="text/javascript" src="app/activity/home/ride.component.js"></script>
     
     
   </head>
