--- a/docsnxt/app/shared/bottombar/bottombar.template.html
+++ b/docsnxt/app/shared/bottombar/bottombar.template.html
@@ -32,14 +32,14 @@
     <div class="col s12">
         <ul class="tabs tabs-fixed-width  grey lighten-4">
             <li class="tab col s3" style="line-height:12px; padding-right:10%">
-                <a ng-href="#!home">
+                <a href="#!home">
                     <i class="material-icons grey-text text-darken-2">home</i><br>
                     <b style="font-size:7pt;" class="black-text">Home</b>
                 </a>
             </li>
             <li class="tab col s3" style="line-height:12px;">
-                <a ng-href="#!more">
-                    <i class="material-icons grey-text text-darken-2">menu</i><br><b style="font-size:7pt"  class="black-text">More</b>
+                <a href="#!more">
+                    <i class="material-icons grey-text text-darken-2">menu</i><br><b style="font-size:7pt;" class="black-text">More</b>
                 </a>
             </li>
         </ul>
