--- a/docsnxt/app/activity/ride/ride.template.html
+++ b/docsnxt/app/activity/ride/ride.template.html
@@ -226,7 +226,7 @@
                         currently at
                     </div>
                     <div class="currentStation">
-                        Quirino Station
+                       Yamaha Monumento Station
                     </div>
 
                     <div class="next">next</div>
@@ -252,6 +252,40 @@
             </a>
         </div>
     </nav>
+
+        <div class="container">
+                  <br><br>
+                          <h2 class="white-text">
+                                        <div class="row">
+                                                          <div class="col s2">
+                                                                            
+                                                                                <div class="rectangle"></div>
+                                                                                                    <div class="ellipse"></div>
+                                                                                                                        <div class="ellipse2"></div>
+                                                                                                                                            <div class="ellipse3"></div>
+                                                                                                                                                            
+                                                                                                                                                            </div>              
+                                                                                                                                                                            <div class="col s10">
+                                                                                                                                                                                                  <div class="currentlyAt">
+                                                                                                                                                                                                                            currently at
+                                                                                                                                                                                                                                                </div>
+                                                                                                                                                                                                                                                                    <div class="currentStation">
+                                                                                                                                                                                                                                                                                             Yamaha Monumento Station
+                                                                                                                                                                                                                                                                                                                 </div>
+
+                                                                                                                                                                                                                                                                                                                                     <div class="next">next</div>
+                                                                                                                                                                                                                                                                                                                                                         <div class="nextStation">Araneta Center-Cubao</div>
+                                                                                                                                                                                                                                                                                                                                                                             <div class="moreStations">and 7 more</div>
+
+                                                                                                                                                                                                                                                                                                                                                                                                 <div class="arrivingAt">arriving at</div>
+                                                                                                                                                                                                                                                                                                                                                                                                                     <div class="destinationStation">Araneta Center-Cubao</div>
+                                                                                                                                                                                                                                                                                                                                                                                                                                         <div class="minutes">in 8 minutes</div>
+
+                                                                                                                                                                                                                                                                                                                                                                                                                                                         </div>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                     </div>            
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                             </h2>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 </div>    
+
 
     <div class="container" style="display:none;" id="geolocationNotAllowed">
         <br><br>
