--- a/docsnxt/index.html
+++ b/docsnxt/index.html
@@ -24,7 +24,7 @@
     	window.data = {
             
             ui:{
-                dark:true
+                dark:false
             }
             
         }; 
